--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         <div class="container">
             <div class="logo">Flexbox</div>
             <ul class="nav">
+                <li><a href="https://btyre.me">Home</a> </li>
+                <li><a href="#">About</a></li>
                 <li>
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
                     <a href="#">Contact</a>
                 </li>
+
+
+
             </ul>
         </div>
 
